<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    app:layout_constraintHeight_percent="0.20"
    tools:context=".init.SignInPage">

    <TextView
        android:id="@+id/textNoAccount2"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/no_account_yet"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/goToSignUpFromSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/goToSignUpFromSignIn"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginBottom="20dp"
        android:background="#00000000"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/vt323"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/interstellar_enemies"
        android:textColor="@color/purple"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.75" />

    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:foregroundTint="@color/transparent"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="@color/yellow"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/green"
        android:textColorLink="@color/black"
        android:textSize="37sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/resetUnderLined"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/forgot"
        android:textColor="@color/green"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="28dp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/forgot_password"
        android:textColor="@color/green"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPass"
        app:layout_constraintWidth_percent="0.75" />

    <EditText
        android:id="@+id/LoginPass"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:foregroundTint="@color/transparent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/green"
        android:textColorLink="@color/black"
        android:textSize="37sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginEmail"
        app:layout_constraintWidth_percent="0.75" />

    <Button
        android:id="@+id/signInBut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/vt323"
        android:text="@string/sign_in"
        android:textSize="23sp"
        app:cornerRadius="0sp"
        app:backgroundTint="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/textNoAccount2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetUnderLined"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>