<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".init.mail.RegisterPage">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0sp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:background="#00000000"
        android:fontFamily="@font/vt323"
        android:text="@string/interstellar_enemies"
        android:textColor="@color/purple"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.78" />

    <EditText
        android:id="@+id/RegisterEmail"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:foregroundTint="@color/transparent"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="0"
        android:textColor="@color/yellow"
        android:textColorHighlight="@color/transparent"
        android:textColorHint="@color/green"
        android:textColorLink="@color/transparent"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintWidth_percent="0.79" />

    <EditText
        android:id="@+id/RegisterEmailPass"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:fontFamily="@font/vt323"
        android:foregroundTint="@color/transparent"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        android:textColorHighlight="@color/transparent"
        android:textColorHint="@color/green"
        android:textColorLink="@color/transparent"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmail"
        app:layout_constraintWidth_percent="0.79" />

    <EditText
        android:id="@+id/RegisterEmailPassConfirm"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"

        android:fontFamily="@font/vt323"
        android:foregroundTint="@color/transparent"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:textColor="@color/yellow"
        android:textColorHighlight="@color/transparent"
        android:textColorHint="@color/green"
        android:textColorLink="@color/transparent"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailPass"
        app:layout_constraintWidth_percent="0.79" />

    <Button
        android:id="@+id/signUpBut"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:fontFamily="@font/vt323"
        android:text="@string/sign_up_"
        android:textSize="24sp"
        app:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterEmailPassConfirm"
        app:layout_constraintVertical_bias="0.569"
        app:layout_constraintWidth_percent="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>